--- a/Sources/Sass/core/_variables_style-dark.scss
+++ b/Sources/Sass/core/_variables_style-dark.scss
@@ -9,25 +9,25 @@ $fa-font-path:"../fonts";
 
 // Custom vars for admin adn user layouts
 $navbar-admin-bg: #2f2f2f;
-$navbar-admin-text-color: darken($navbar-admin-bg, 15%);
+$navbar-admin-text-color: #D3D3D3;
 $navbar-admin-link-color: darken($navbar-admin-text-color, 15%);
-$navbar-admin-link-hover-color:lighten($navbar-admin-link-color, 10%);
+$navbar-admin-link-hover-color: #FF8C00;
 
 $navbar-user-bg: #2f2f2f;
-$navbar-user-text-color: darken($navbar-user-bg, 15%);
+$navbar-user-text-color: #D3D3D3;
 $navbar-user-link-color: darken($navbar-user-text-color, 15%);
-$navbar-user-link-hover-color:lighten($navbar-user-link-color, 10%);
+$navbar-user-link-hover-color: #FF8C00;
 
 // Bootstrap vars
 //== Navbar
 $navbar-default-bg:                #2f2f2f;
-$navbar-default-color:             darken($navbar-default-bg, 10%);;
+$navbar-default-color:             darken($navbar-default-bg, 10%);
 $navbar-default-border:            darken($navbar-default-bg, 6.5%);
 
 // Navbar links
-$navbar-default-link-color:                #E6E6FA;
-$navbar-default-link-hover-color:          darken($navbar-default-bg, 50%);
-$navbar-default-link-disabled-color:       darken($navbar-default-bg, 15%);
+$navbar-default-link-color:                #D3D3D3;
+$navbar-default-link-hover-color:          #FF8C00;
+$navbar-default-link-disabled-color:       lighten($navbar-default-bg, 15%);
 
 // Navbar brand label
 $navbar-default-brand-color:               $navbar-default-link-color !default;
